@@ -105,6 +105,9 @@ Data exploration
 - Watchpoints.  You can have the debugged program stop automatically
   whenever a particular variable is read or written.
 
+- `Data->Examine Memory' lets you examine memory in any of several
+  formats, independently of your program's data types.
+
 - In `stacked window' configuration, the data window automatically
   pops up as soon as some value is displayed, and it pops down as soon
   as the last visible display is deleted.
